[package]
name = "rust-workshop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
markdown = "0.3.0"
smol = "1.2.5"
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = ["full"] }
